@@ -413,6 +413,8 @@ disburse_valyria_settlement_reward_effect = {
 	}
 }
 
+
+
 zz_valyria_settlement_effect = { 
 	scope:host = { 
 		switch = {
@@ -432,7 +434,42 @@ zz_valyria_settlement_effect = {
 							add_building = castle_01
 						}
 					}
-					
+					if = { 
+						limit = {
+							has_character_flag = learning_building_flag
+						}
+						remove_character_flag = learning_building_flag
+					}
+					if = { 
+						limit = {
+							has_character_flag = diplomacy_building_flag
+						}
+						remove_character_flag = diplomacy_building_flag
+					}
+					if = { 
+						limit = {
+							has_character_flag = stewardship_building_flag
+						}
+						remove_character_flag = stewardship_building_flag
+					}
+					if = { 
+						limit = {
+							has_character_flag = intrigue_building_flag
+						}
+						remove_character_flag = intrigue_building_flag
+					}
+					if = { 
+						limit = {
+							has_character_flag = martial_building_flag
+						}
+						remove_character_flag = martial_building_flag
+					}
+					if = { 
+						limit = {
+							has_character_flag = prowess_building_flag
+						}
+						remove_character_flag = prowess_building_flag
+					}
 					barony = { set_coa = this.holder.house }
 				}
 				remove_character_flag = settle_castle
