@@ -259,6 +259,7 @@ zz_valyria_settlement.0100 = {
 							#Effect
 							custom_tooltip = zz_valyria_settlement_tt_positive_massive
 							scope:activity = { activity_special_type_progression_massive = yes }
+							add_character_flag = learning_building_flag
 						}
 					}
 				}
@@ -401,6 +402,7 @@ zz_valyria_settlement.0200 = {
 							#Effect
 							custom_tooltip = zz_valyria_settlement_tt_positive_massive
 							scope:activity = { activity_special_type_progression_massive = yes }
+							add_character_flag = stewardship_building_flag
 						}
 					}
 				}
@@ -541,6 +543,7 @@ zz_valyria_settlement.0300 = {
 							#Effect
 							custom_tooltip = zz_valyria_settlement_tt_positive_massive
 							scope:activity = { activity_special_type_progression_massive = yes }
+							add_character_flag = diplomacy_building_flag
 						}
 					}
 				}
@@ -705,6 +708,7 @@ zz_valyria_settlement.0400 = {
 								}
 							}
 							#Effect
+							add_character_flag = intrigue_building_flag
 							custom_tooltip = zz_valyria_settlement_tt_positive_massive
 							scope:activity = { activity_special_type_progression_massive = yes }
 						}
@@ -847,6 +851,7 @@ zz_valyria_settlement.0500 = {
 							character = root
 			
 							#Effect
+							add_character_flag = martial_building_flag
 							custom_tooltip = zz_valyria_settlement_tt_positive_massive
 							scope:activity = { activity_special_type_progression_massive = yes }
 						}
@@ -985,6 +990,7 @@ zz_valyria_settlement.0600 = {
 							character = root
 			
 							#Effect
+							add_character_flag = prowess_building_flag
 							custom_tooltip = zz_valyria_settlement_tt_positive_massive
 							scope:activity = { activity_special_type_progression_massive = yes }
 						}
