@@ -220,8 +220,10 @@ magic_shadow_dagger_text:0 "By the secret arts of shadow, [secondary_actor.GetFi
 ## Spell Learning Toast 
 
 ## Interaction
-actor_secondary_
-recipient_
+valyria_magic_shadow_shield:0 
+valyria_magic_shadow_shield_desc:0
+actor_secondary_valyria_magic_shadow_shield:0 "Caster"
+recipient_valyria_magic_shadow_shield:0 "Spell Subject"
 ##Spell Options 
 ## Spell Toast 
 ## Spell Learning Toast 
