@@ -1,3 +1,5 @@
 VERSION 0.4.5
 - Added localisation for various colonisation and settlement events
 - Altered colonisation skill check events
+- Added Shadow Magic Spells. 
+- Increased Fire Magic, Water Magic, and Air Magic Spells to a minimum of four spells per category. 
